# info-fetch-push-service

./: .env.example  .gitignore  README.md  pyproject.toml
config/: runtime.example.json
deploy/linux/: bootstrap.sh
deploy/systemd/: info-fetch-push.service
src/info_fetch_push_service/: __init__.py  config.py  main.py  models.py  pipeline.py  storage.py
src/info_fetch_push_service/ai/: __init__.py  deepseek.py
src/info_fetch_push_service/fetchers/: __init__.py  x_scraper.py
src/info_fetch_push_service/notifiers/: feishu.py
