[project]
name = "info-fetch-push-service"
version = "0.1.0"
description = "Fetch tweets from X, summarize them with DeepSeek, and push notifications to Feishu."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.54.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
info-fetch-push = "info_fetch_push_service.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
